--- a/authentication-service.properties
+++ b/authentication-service.properties
@@ -3,9 +3,9 @@ server.port=9000
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/authdb
+spring.datasource.url=jdbc:mysql://amruta-spotify-app-database.c36kqqesmxb2.eu-west-3.rds.amazonaws.com:3306/authdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=CDaoSrAJRVPQfrP1x55R
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
