--- a/music-service.properties
+++ b/music-service.properties
@@ -18,9 +18,9 @@ spotify.api.token.url=http://localhost:8901/callback
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/musicdb
+spring.datasource.url=jdbc:mysql://amruta-spotify-app-database.c36kqqesmxb2.eu-west-3.rds.amazonaws.com:3306/authdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=CDaoSrAJRVPQfrP1x55R
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
