--- a/userprofile-service.properties
+++ b/userprofile-service.properties
@@ -3,9 +3,9 @@
 #spring.application.name=user-profile
 server.port=8087
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+spring.datasource.url=jdbc:mysql://amruta-spotify-app-database.c36kqqesmxb2.eu-west-3.rds.amazonaws.com:3306/userdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=CDaoSrAJRVPQfrP1x55R
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
